[project]
name = "claude-with-the-anthropic-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.105.2",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "notebook>=7.5.6",
    "requests>=2.34.2",
    "voyageai>=0.4.0",
]
